package com.m2i.poe;

import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

public class TBmardi {

//    public static void main(String[] args) {
//        public static void main (String[]args){
//
//            ArrayList<Integer> 1 = new ArrayList<Integer>();
//            l.add(1);
//            l.add(2);
//            l.add(3);
//            l.add(4);
//            l.add(5);
//
//            System.out.println(l);
//
//        }
//    }
}