package com.m2i.poe.TP_ADN;


import java.util.ArrayList;
/*
public class ADN {

    private ArrayList<Nucleotide> brin= new ArrayList<>(); //Istantiation de nucleides

    public void add (Nucleotide n) {   //Ajoute
          this.brin.add(n);
        }


        public String bringToSpring;

    {
        String result = "";
        for (Nucleotide n : getBring()) {
            result += n.getSymbol();
        }
        return result;
    }


    public String getBring() {
        return bringToSpring;
    }


    }

*/