package com.m2i.poe.TP_ADN;

public class AcidAmine {
}
