package com.m2i.poe.TP_ADN;
/*
import java.util.ArrayList;

public class RNA {

    private ArrayList<Nucleotide> brin=new ArrayList<>();
    }

public void setBrin(ArrayList<Nucleotide> brin) {
    this.brin= brin;
}

    public ArrayList<Nucleotide> getBrin() {
    return brin;

    public void add (Nucleotide n) { ////Methode add
    this.getBrin().add(n);

        ///methode
        this.getBrin().add(n);

    }
}
*/