package com.m2i.poe.bank;

public class Customer {
 int id;
 String firsName;
 String lastName;

 public Customer;


}

