package com.m2i.poe.train;

public class Wagons {
}
